fixed colspan and data align

--- a/src/pages/deposits/Deposits.scss
+++ b/src/pages/deposits/Deposits.scss
@@ -118,4 +118,11 @@
   border: none;
   outline: none;
   background-color: transparent;
+  margin-left: 18px;
+}
+.tfootIconRight {
+  margin-left: 10px;
+}
+.tfootIconLeft {
+  margin-right: 10px;
 }
